# pacs-v2

./: .env.example  API_DOCUMENTATION.md  DEPLOYMENT_GUIDE.md  README.md  TESTING_SUMMARY.md  docker-compose.yml
backend/: .gitignore  Dockerfile  init_db.py  pyproject.toml
backend/app/: auth.py  database.py  dicom_utils.py  main.py  models.py  schemas.py
backend/app/ai/: image_processor.py  report_ai_generator.py  report_generator.py  torchio_processor.py
backend/app/routers/: ai.py  auth.py  billing.py  centres.py  imaging_machines.py  reports.py  studies.py  users.py
frontend/: .env  Dockerfile  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: DicomViewer.tsx  Layout.tsx  ProtectedRoute.tsx
frontend/src/components/ui/: sidebar.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/lib/: api.ts  cornerstoneInit.ts  utils.ts
frontend/src/pages/: Dashboard.tsx  Login.tsx  UploadStudy.tsx  ViewStudy.tsx
frontend/src/pages/dashboards/: AdminDashboard.tsx  DiagnosticCentreDashboard.tsx  RadiologistDashboard.tsx  TechnicianDashboard.tsx
